test/errors/delete_constant.li
const y = 100;
delete y;
